--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "A small python app that calculates the seconds from now to a specified date and time"
 authors = ["Pierre Le Roux <leroux.pierre@gmail.com>"]
 readme = "README.md"
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
